--- a/_projects/2022-07-24-Car Following Data-Driven Model/Car-Following-Data-Driven-Model.html
+++ b/_projects/2022-07-24-Car Following Data-Driven Model/Car-Following-Data-Driven-Model.html
@@ -112,11 +112,10 @@ code span.wa { color: #bf0303; } /* Warning */
   <meta property="twitter:description" content="The models predict Acceleration and calculate Subject Vehicle Trajectories. We have used multiple machine learning models in this project."/>
 
   <!--/radix_placeholder_meta_tags-->
-  
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","preview","bibliography"]}},"value":[{"type":"character","attributes":{},"value":["Data-Driven Car Following Model using Python"]},{"type":"character","attributes":{},"value":["The models predict Acceleration and calculate Subject Vehicle Trajectories. We have used multiple machine learning models in this project.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Neel Chaudhari"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":[]}},"value":[]}]}]},{"type":"character","attributes":{},"value":["07-13-2022"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained","highlight","toc","toc_depth"]}},"value":[{"type":"logical","attributes":{},"value":[false]},{"type":"character","attributes":{},"value":["kate"]},{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[4]}]}]},{"type":"character","attributes":{},"value":["figs/carfollowing.jpg"]},{"type":"character","attributes":{},"value":["references.bib"]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output"]}},"value":[{"type":"character","attributes":{},"value":["Data-Driven Car Following Model using Python"]},{"type":"character","attributes":{},"value":["The models predict Acceleration and calculate Subject Vehicle Trajectories. We have used multiple machine learning models in this project.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Neel Chaudhari"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":[]}},"value":[]}]}]},{"type":"character","attributes":{},"value":["07-13-2022"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained","highlight","toc","toc_depth"]}},"value":[{"type":"logical","attributes":{},"value":[false]},{"type":"character","attributes":{},"value":["kate"]},{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[4]}]}]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -1755,19 +1754,19 @@ All three models are able to meet the trajectory oscillations.
 <p>👦 <b>Vineet Dhamija</b> <br>
       Email: <a>VD17@myscc.ca</a> <br>
       GitHub:
-<a href="https://github.com/VineetDhamija"><span class="citation" data-cites="VineetDhamija">(<a href="#ref-VineetDhamija" role="doc-biblioref"><strong>VineetDhamija?</strong></a>)</span></a> <br></p>
+<a href="https://github.com/VineetDhamija"><span class="citation" data-cites="VineetDhamija">@VineetDhamija</span></a> <br></p>
 <p>👦 <b>Neel Chaudhari</b> <br>
       Email: <a>NC57@myscc.ca</a> <br>
       GitHub:
-<a href="https://github.com/neelschaudhari000"><span class="citation" data-cites="neelschaudhari000">(<a href="#ref-neelschaudhari000" role="doc-biblioref"><strong>neelschaudhari000?</strong></a>)</span></a> <br></p>
+<a href="https://github.com/neelschaudhari000"><span class="citation" data-cites="neelschaudhari000">@neelschaudhari000</span></a> <br></p>
 <p>👦 <b>Rakesh Singh</b> <br>
       Email: <a>rs334@myscc.ca</a> <br>
       GitHub:
-<a href="https://github.com/rakesh894"><span class="citation" data-cites="rakesh894">(<a href="#ref-rakesh894" role="doc-biblioref"><strong>rakesh894?</strong></a>)</span></a> <br></p>
+<a href="https://github.com/rakesh894"><span class="citation" data-cites="rakesh894">@rakesh894</span></a> <br></p>
 <p>👦 <b>Umair Durrani</b> <br>
       Email: <a>UDURRANI@stclaircollege.ca</a> <br>
       GitHub:
-<a href="https://github.com/durraniu"><span class="citation" data-cites="durraniu">(<a href="#ref-durraniu" role="doc-biblioref"><strong>durraniu?</strong></a>)</span></a> <br></p>
+<a href="https://github.com/durraniu"><span class="citation" data-cites="durraniu">@durraniu</span></a> <br></p>
 </p>
 <p><br>
 ✤ <i>This was the final project for the course DAB402- Capstone (Summer 2022), at <a href="https://www.stclaircollege.ca/">St Clair College</a><i></p>
@@ -1783,10 +1782,7 @@ All three models are able to meet the trajectory oscillations.
 <!--radix_placeholder_site_after_body-->
 <!--/radix_placeholder_site_after_body-->
 <!--radix_placeholder_appendices-->
-<div class="appendix-bottom">
-<h3 id="references">References</h3>
-<div id="references-listing"></div>
-</div>
+<div class="appendix-bottom"></div>
 <!--/radix_placeholder_appendices-->
 <!--radix_placeholder_navigation_after_body-->
 <!--/radix_placeholder_navigation_after_body-->
